--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <div class="container contenu">
 	<div class="jumbotron">
 		<center>
-			<h1>Bonjour à vous !</h1>
-			<p><i>Grâce cette application web, vous pourrez faire des recherches sur les Immeubles protégés au titre des Monuments Historiques présents dans la base de données mais également en récupérer des statistiques et des PDF.</br>
-		    Vous trouverez ci-dessous un rappel du contexte du projet et une description des élèves ayant participé au projet.</i></p>
+			<h1>Bienvenue !</h1>
+			<p><i>Cette application web regroupe des données sur les Immeubles protégés au titre des Monuments Historiques, vous pouvez les consulter et naviguer entre elles dans la page recherche.</br>
+		    Vous trouverez ci-dessous une présentation du contexte du projet et de l'équipe.</i></p>
 	    </center>
 	</div>
 
 	<div class="Enonce">
                
-        <h3>Enoncé</h3>
+        <h3>Enoncé :</h3>
        
         <p><i class="icon-chevron-right"></i> On dispose de données des
           	<a href="https://www.data.gouv.fr/fr/datasets/monuments-historiques-liste-des-immeubles-proteges-au-titre-des-monuments-historiques/">Immeubles protégés au titre des Monuments Historiques</a>
@@ -134,40 +134,33 @@
        	</p>
     </div>
     <div class = "row">
+	<h3>Présentation de l'équipe :</h3>
     	<div class="col-md-3">
       		<div class="thumbnail">
-        		<img src="/img/Pierre_Tuaillon.jpg" alt="Pierre TUAILLON" class="img-circle imgProfil">
-        		<div class="caption">
-          			<h3>Pierre TUAILLON</h3>
-          			<p></p>
-        		</div>
+        		<img src="/img/Pierre_Tuaillon.jpg" alt="Pierre TUAILLON" class="img-rounded imgProfil">
+          		<h3>Pierre TUAILLON</h3>
+          		<p>presentation</p>
       		</div>
     	</div>
     	<div class="col-md-3">
       		<div class="thumbnail">
-        		<img src="/img/Nicholas_BARNINI.jpg" alt="Nicholas BARNINI" class="img-circle imgProfil">
-        		<div class="caption">
-          			<h3>Nicholas BARNINI</h3>
-          			<p></p>
-        		</div>
+        		<img src="/img/Nicholas_BARNINI.jpg" alt="Nicholas BARNINI" class="img-rounded imgProfil">
+          		<h3>Nicholas BARNINI</h3>
+          		<p>presentation</p>
       		</div>
     	</div>
     	<div class="col-md-3">
       		<div class="thumbnail">
-        		<img src="/img/Nathan_Moncade.jpg" alt="Nathan MONCADE" class="img-circle imgProfil">
-        		<div class="caption">
-          			<h3>Nathan MONCADE</h3>
-          			<p></p>
-        		</div>
+        		<img src="/img/Nathan_Moncade.jpg" alt="Nathan MONCADE" class="img-rounded imgProfil">
+          		<h3>Nathan MONCADE</h3>
+          		<p>presentation</p>
       		</div>
     	</div>
     	<div class="col-md-3">
       		<div class="thumbnail">
-        		<img src="/img/Manon_INGRASSIA.jpg" alt="Manon INGRASSIA" class="img-circle imgProfil">
-        		<div class="caption">
-          			<h3>Manon INGRASSIA</h3>
-          			<p></p>
-        		</div>
+        		<img src="/img/Manon_INGRASSIA.jpg" alt="Manon INGRASSIA" class="img-rounded imgProfil">
+          		<h3>Manon INGRASSIA</h3>
+          		<p>presentation</p>
       		</div>
     	</div>
     </div>
