--- a/stats.html
+++ b/stats.html
@@ -2,52 +2,55 @@
 
 <!-- Inclusion du module socket.io -->
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-
+<script src="/socket.io/socket.io.js"></script>
+<script src="http://localhost:4040/socket.io/socket.io.js"></script>
 <script type="text/javascript">
 
 // Connexion au socket serveur
-var socket = io.connect();
+var socket = io.connect('http://localhost:4040');
 
-//Variable global
 
-//Resultat par référence;
-var requeteToutesRegions;
-var requeteCommune;
-
-// Gestion de la réception du résultat de la requête
-function notification(content, requete){
-	if(requete=='regions'){
-		requeteToutesRegions=content;
-	}else if (requete == 'commune'){
-		requeteCommune = content;
-	}
+window.onload = function() {
+    requete();
 }
 
-//fonction appelé au changement dans les listes
-function envoieChoix(id){
-	var choixSelect = document.getElementById(id);
-}
+function requete() {
+	socket.emit('statsRegions', 'client demande les statistiques par regions');
+}	
 
-// recuperation des messages "Region" du socket serveur
-socket.on('resultatRequeteToutesRegions', function(x) { notification(x,'regions'); });
+socket.on('statsRegions', function(x) {
 
-
-function initialize(){
-
-}
+	//document.getElementById("statsRegions").innerHTML='<figure>  <figcaption>Statistiques :</figcaption><svg class="chart" width="100%" aria-labelledby="title" role="img">';
 
 
-initialize();
+	document.getElementById("statsRegions").innerHTML+=x;
+	//document.getElementById("statsRegions").innerHTML+='</svg></figure>';
+});
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </script>
 
 
 
 
-<input id="Region" class="btnGenese" type="button" value="Générer" onclick="dessiner()" />
+<!-- <input id="Region" class="btnGenese" type="button" value="Générer" onclick="dessiner()" /> -->
 
-<figure>  <figcaption>Statistiques :</figcaption><svg id="svg1" class="chart" width="100%" height="500" aria-labelledby="title" role="img">
 
-</svg></figure>
+<div id="statsRegions">
+vide
+</div>
 
 <script type="text/javascript" src="__footer.js"></script>
