--- a/stats.html
+++ b/stats.html
@@ -18,13 +18,16 @@ function requete() {
 	socket.emit('statsRegions', 'client demande les statistiques par regions');
 }	
 
-socket.on('statsRegions', function(x) {
+socket.on('statsRegions', function(tab) {
 
-	//document.getElementById("statsRegions").innerHTML='<figure>  <figcaption>Statistiques :</figcaption><svg class="chart" width="100%" aria-labelledby="title" role="img">';
-
-
-	document.getElementById("statsRegions").innerHTML+=x;
-	//document.getElementById("statsRegions").innerHTML+='</svg></figure>';
+	tab=tab.split(';');
+	var py=10;
+	for(i = 0 ; i+1 < tab.length ; i+=2) {
+		var texte = tab[i+1]+' en '+tab[i];
+		document.getElementById("statsRegions").innerHTML+='<g class="bar">    <rect width="'+(tab[i+1]/10)+'" height="19" y="'+py+'"></rect> <text width="1000" x="'+(tab[i+1]/10+10)+'" y="'+(py+10)+'" dy=".35em">'+texte+'</text>  </g>';
+		document.getElementById("p").innerHTML+=texte+', ';
+		py+=20;
+	}
 });
 
 
@@ -45,12 +48,13 @@ socket.on('statsRegions', function(x) {
 
 
 
+<p id="p"></p>
 
 <!-- <input id="Region" class="btnGenese" type="button" value="Générer" onclick="dessiner()" /> -->
+<figure>  <figcaption>Statistiques :</figcaption><svg id="statsRegions" class="chart" width="100%" height="100%" aria-labelledby="title" role="img"><title>Statistiques par région</title>
+<!-- remplissage -->
+</svg></figure>
 
 
-<div id="statsRegions">
-vide
-</div>
 
 <script type="text/javascript" src="__footer.js"></script>
